EeEEEeeEee!~ We have mascots now!

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -3,6 +3,8 @@
   Help!
 </h2>
 
+<%= image_tag 'mascot/Wizards.png', alt: 'A suave little lizard welcoming you to the website.', class: 'mascot float-right', width: 300 %>
+
 <section id="getting-started">
   <h3><small>Q:</small> How do I set this up?</h3>
   <p>
