--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -172,15 +172,10 @@
 
 <h2>Help us out!</h2>
 <p>
-  We'll be upfront! This site very cheap to operate. We have very little in running costs, and I am personally OK with
-  paying the $3-5 a month it costs in bandwidth and compute that it takes to keep this service online; however, a few
-  folks have asked if they can compensate our <strong>time</strong> as a tip, so we set up a kofi!
-</p>
-<p>
-  Know that this is
-  just for donating to us, because we like money. The site is cheap to run, interesting to work on, and is
-  <strong>not in danger</strong> of being shut down due
-  to expenses. It's just a nice gesture that's very much appreciated.
+  <%= image_tag 'mascot/TaylorNSFW.png', alt: 'Taylor, a lizard with tits, shaking them at you', class: 'mascot float-right', width: 195 %>
+  We'll be upfront! This site pretty cheap to operate. We have very little in running costs, and I am somewhat OK with
+  paying the ~$40 a month it costs in bandwidth and compute that it takes to keep this service online; however, a few
+  folks have asked if they can help out or compensate our time as a tip, so we set up a kofi!
 </p>
 
 <a href="https://ko-fi.com/pawcorp" target="_blank" class="kofi-button">
