--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,8 +93,10 @@
     <footer>
       <p>
         Want more horny debauchery? Try <a href="https://joi.how">joi.how</a>.<br/>
+        Horny lizards Warren, Taylor, and Ki conceived of and drawn by <a href="https://www.furaffinity.net/user/cherryzbun/" target=_blank>CherryzBun</a><br/>
         <%= link_to 'Need help with Walltaker?', help_path %>
       </p>
+      <p></p>
       <small>
         © joi.how 2022 / Commit
         <a href="https://github.com/pupgray/walltaker/commit/<%= ENV['COMMIT_HASH'] %>">#<%= ENV['COMMIT_HASH'] != '' ? ENV['COMMIT_HASH'] : '' %></a>
