--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,16 +30,7 @@
       <div class="header__inner">
         <h1>
           <a href="/">
-            <span class="show-desktop">
-              Walltaker
-
-              <%= image_tag 'mascot/Ki.png', alt: 'A suave little lizard welcoming you to the website.', class: 'mascot', height: 190 %>
-            </span>
-            <span class="show-mobile">
-              WT
-
-              <%= image_tag 'mascot/Ki.png', alt: 'A suave little lizard welcoming you to the website.', class: 'mascot', height: 100 %>
-            </span>
+            <%= render 'layouts/title', mascot: current_user&.mascot, pervert: current_user&.pervert || false %>
           </a>
         </h1>
         <div class="user-tools">
@@ -84,6 +75,7 @@
 
     <div class="hang">
       <a href="https://discord.gg/s4z9GfwuKw" target="_blank"><ion-icon name="logo-discord"></ion-icon> Join our Discord</a>
+      <%= render 'layouts/mascot_picker' if current_user %>
     </div>
 
     <main>
