--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -201,7 +201,7 @@
           <div class="abilities__ability__title">
             <strong>
               <% if can_be_set_by_lizard %>
-                <ion-icon name="thumbs-up"></ion-icon>
+                <%= image_tag "mascot/#{lizard.capitalize}Head.png", class: 'mascot', height: 25, width: 25 %>
               <% else %>
                 <ion-icon name="hand-left"></ion-icon>
               <% end %>
