--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -74,6 +74,9 @@
               <ion-icon name="videocam-outline"></ion-icon>
             <% when 'can_be_set_by_porn_bot' %>
               <ion-icon name="dice-outline"></ion-icon>
+            <% when 'can_be_set_by_lizard' %>
+              <% mascot = link.user.mascot || 'ki' %>
+              <%= image_tag "mascot/#{mascot.capitalize}Head.png", class: 'mascot', height: 22, width: 22 %>
             <% end %>
           </span>
         <% end %>
