--- a/app/views/link_wizard/summon.html.erb
+++ b/app/views/link_wizard/summon.html.erb
@@ -16,6 +16,6 @@
 
     <%= button_to 'Thanks cuties!', apply_link_wizard_path(impatient: false) %>
 
-    <%= button_to 'Fucking get going already.', apply_link_wizard_path(impatient: true) %>
+    <%= button_to 'Thanks but... can we get a move on?', apply_link_wizard_path(impatient: true) %>
   </div>
 <% end %>
