--- a/app/views/layouts/link_wizard.html.erb
+++ b/app/views/layouts/link_wizard.html.erb
@@ -4,13 +4,15 @@
 <% content_for :content do %>
   <div class="task-tools">
     <div class="left">
-      <%= link_to "Come back later" %>
+      <%= link_to "Come back later", link_path(@link.id) %>
     </div>
   </div>
 
   <h2 class="one-line">
-    <ion-icon name="color-wand" class="big"></ion-icon>
-    Wizard
+    <span>
+      <ion-icon name="color-wand" class="big"></ion-icon>
+      Wizard
+    </span>
     <meter min="0" max="100" value="<%= @progress %>"></meter>
   </h2>
 
