chewtoy WalltakerEngine-chewtoy/ user agent added

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -155,6 +155,9 @@
         <% when :jberliner %>
           <span>JBerliner's Walltaker.sh</span>
           <ion-icon name="pint"></ion-icon>
+        <% when :chewtoy %>
+          <span>Walltaker Engine</span>
+          <ion-icon name="car-sport"></ion-icon>
         <% when :unknown %>
           <ion-icon role="presentation" name="help-circle-outline"></ion-icon>
         <% end %>
