Lol chewtoy client is desktop

--- a/app/views/links/_details.html.erb
+++ b/app/views/links/_details.html.erb
@@ -12,6 +12,7 @@
   swift: :desktop,
   android_changer: :mobile,
   jberliner: :desktop,
+  chewtoy: :desktop,
   unknown: :desktop
 } %>
 <% device = devices[client] %>
