Mod tool option to solve old email cap issue

--- a/app/views/mod_tools/_password_reset_form.erb
+++ b/app/views/mod_tools/_password_reset_form.erb
@@ -2,7 +2,8 @@
   <%= form_with url: mod_tools_passwords_update_path, method: :post do |f| %>
     <%= f.label :email, 'Email address user claims is theirs:', style: "display: block" %>
     <%= f.text_field :email, value: params['email'] %>
-    <%= f.submit 'Try to generate a reset link' %>
+    <%= f.submit 'Try to generate a reset link (case insensitive)' %>
+    <%= f.submit 'Try to generate a reset link (case sensitive)' %>
   <% end %>
 
   <% if params['fail'] || params['link'] %>
