--- a/app/views/mod_tools/index.html.erb
+++ b/app/views/mod_tools/index.html.erb
@@ -41,10 +41,14 @@
   <%= button_to "Edit a user", mod_tools_users_index_path, method: :get, class: 'secondary' %>
 </section>
 
+<section>
+  <h3>Raiding</h3>
+  <%= button_to "Quarantine account(s)", mod_tools_quarantine_index_path, method: :get %>
+</section>
+
 <!--<section>
   <h3>Moderation</h3>
   <%#= button_to "I need to ban a user with an account", mod_tools_passwords_index_path, method: :get %>
-  <%#= button_to "I suspect a user is sending bad messages", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
-  <%#= button_to "I need to ban an anon IP address", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
+<%#= button_to "I suspect a user is sending bad messages", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
+<%#= button_to "I need to ban an anon IP address", mod_tools_passwords_index_path, method: :get, class: 'secondary' %>
 </section>-->
-More to come
