--- a/app/views/mod_tools/show_user.html.erb
+++ b/app/views/mod_tools/show_user.html.erb
@@ -1,3 +1,5 @@
+<% user ||= nil %>
+
 <div class="task-tools">
   <div class="left">
     <%= link_to "Cancel", mod_tools_index_path %>
@@ -10,7 +12,7 @@
   <small>Gray trusts you. Remember our PII rules.</small>
 </h2>
 
-<%= render 'mod_tools/pick_user_form' %>
+<%= render 'mod_tools/pick_user_form', user: %>
 
 
 
