--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
 <header>
   <div class="header__age-warning">
     🔞 This is an app for adults over the age of 18 only.<br/>
+    <h3>⚠️ The site will be down for a little bit after 3:30EST!</h3>
+    <p>I'm switching to a better server. While the server change is happening, the site will be inaccessible. You may regain access before other people, due to DNS timeout things. This is normal. Expect like, a couple hours of weirdness. Things will be faster, cheaper, and generally less shit after! Fuck DigitalOcean (our former server provider), fuck every single hole they have.</p>
   </div>
   <div class="header__inner">
     <h1>
