--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -116,7 +116,7 @@
   account. Enter your username, and then go about your day!
 </p>
 
-<%= inline_svg_tag "wt.svg", class: "explainer_graphic", aria: true, title: "A flow chart, showing links pushing updates to devices running walltaker clients.", width: '100%', height: 'auto' %>
+<%= inline_svg_tag "wt.svg", class: "explainer_graphic", aria: true, title: "A flow chart, showing links pushing updates to devices running walltaker clients.", width: '100%'%>
 
 <h2 id="companion-apps">Clients</h2>
 <ul>
