Remove ugly header about heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,7 @@
 <body>
 <header>
   <div class="header__age-warning">
-    🔞 This is an app for adults over the age of 18 only.<br/>
-    <h3 style="display: flex;justify-content: center;gap: 0.4rem;">We're on Heroku <a href="https://emoji.gg/emoji/1299-joy"><img src="https://cdn3.emoji.gg/emojis/1299-joy.gif" width="32px" height="32px" alt="joy"></a></h3>
-    <p>The site is stable! If you see anything out of the ordinary, contact any mod on the discord, or friend + message <a href="https://walltaker.joi.how/users/gray">Gray</a> on here. This banner will go away soon, I know the header sucks as it is!</p>
+    🔞 This is an app for adults over the age of 18 only.
   </div>
   <div class="header__inner">
     <h1>
