Recent events mod tool

--- a/app/views/mod_tools/index.html.erb
+++ b/app/views/mod_tools/index.html.erb
@@ -44,6 +44,7 @@
 <section>
   <h3>Raiding</h3>
   <%= button_to "Quarantine account(s)", mod_tools_quarantine_index_path, method: :get %>
+  <%= button_to "Recent Events", mod_tools_events_index_path, method: :get %>
 </section>
 
 <!--<section>
